// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Input renders checked without crashing 1`] = `
<Toggle
  input={
    Object {
      "name": "toggle-input",
      "onBlur": [Function],
      "onChange": [Function],
      "onFocus": [Function],
      "value": true,
    }
  }
  labelPosition="right"
  meta={Object {}}
>
  <div
    className=" labelContainerRight cursor-pointer "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="containerActive"
    >
      <div
        className="toggleActive"
      />
    </div>
  </div>
</Toggle>
`;

exports[`Toggle Input renders unchecked without crashing 1`] = `
<Toggle
  input={
    Object {
      "name": "toggle-input",
      "onBlur": [Function],
      "onChange": [Function],
      "onFocus": [Function],
      "value": false,
    }
  }
  labelPosition="right"
  meta={Object {}}
>
  <div
    className=" labelContainerRight cursor-pointer "
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <div
      className="containerInactive"
    >
      <div
        className="toggleInactive"
      />
    </div>
  </div>
</Toggle>
`;
